# NanoNet

./: .gitignore  LICENCE  README.MD  data.json  main.py  mnis_example.py  mnis_loadaer.py  pyproject.toml  requirements.txt
.github/workflows/: update-tag.yml
NanoNet/: __init__.py  network.py  utils.py
NanoNet/Exceptions/: errors.py
NanoNet/activationFunction/: relu.py  sigmoid.py  softmax.py
NanoNet/costFunction/: __init__.py  base.py  binary_cross_entropy.py  categorial_cross_entropy.py  costFunction.py  cross_entropy.py  log_likelihood.py  mean_absolute_cost.py  quadratic_cost.py
NanoNet/data/: __init__.py  data_loader.py  dataset.py  examples.py
NanoNet/optimizer/: __init__.py  adam.py  base.py  optimizer.py  rms_promp.py  sgd.py  sgd_momentum.py
mnist_example/: example_params.json  mnis_example.py  mnis_loadaer.py  mnist_model.json
src/NanoNet/activationFunction/: __init__.py  sigmoid.py  softmax.py
src/NanoNet/costFunction/: mean_absolute_cost.py  quadratic_cost.py
src/NanoNet/data/: data_loader.py
src/NanoNet/optimizer/: __init__.py  base.py  rms_prop.py  sgd.py  sgd_momentum.py
src/NanoNet_examples/: mnist_example.py
