[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "NanoNet-ML"
version = "0.1.0"
authors = [
  { name="Drizzr" },
]
description = "A lightweight dense neural network library inspired by Aaron Courville."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy>=1.26.4",
    "tqdm>=4.66.0",
]

[project.scripts]
# This creates the 'nanonet-mnist' command in the terminal
nanonet-mnist = "NanoNet_examples.mnist_example:main"

[tool.setuptools]
# This tells setuptools where to find your code
packages = { find = { where = ["src"], include = ["*"] } }

[tool.setuptools.package-data]
# This ensures the MNIST data file is included in the installation
"NanoNet.data" = ["*.gz"]

